main and codes in css added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,96 @@
       </div>
     </div>
 
+     <!-- Main Content -->
+  <main class="product-grid">
+    <!-- Product Card 1 -->
+    <div class="product-card">
+      <div class="product-image">
+        <img src="./img/1.webp" alt="Relaxed Fit Tee">
+        <span class="badge discount">-50%</span>
+        <span class="badge sustainability">Sostenibilità</span>
+      </div>
+      <div class="product-info">
+        <span class="brand">Levi's</span>
+        <h3>RELAXED FIT TEE UNISEX</h3>
+        <p class="price"><span class="discounted">14,99 €</span> <span class="original">29,99 €</span></p>
+      </div>
+      <button class="wishlist">❤️</button>
+    </div>
+
+    <!-- Product Card 2 -->
+    <div class="product-card">
+      <div class="product-image">
+        <img src="./img/2.webp" alt="Guess Tee">
+        <span class="badge discount">-30%</span>
+      </div>
+      <div class="product-info">
+        <span class="brand">Guess</span>
+        <h3>ROSES TEE</h3>
+        <p class="price"><span class="discounted">29,99 €</span> <span class="original">39,99 €</span></p>
+      </div>
+      <button class="wishlist">❤️</button>
+    </div>
+
+    <!-- Product Card 3 -->
+    <div class="product-card">
+      <div class="product-image">
+        <img src="./img/3.webp" alt="Pastel Suit">
+        <span class="badge discount">-30%</span>
+      </div>
+      <div class="product-info">
+        <span class="brand">Come Zucchero Filato</span>
+        <h3>VOGLIA DI COLORI A PASTELLO</h3>
+        <p class="price"><span class="discounted">129,99 €</span> <span class="original">184,99 €</span></p>
+      </div>
+      <button class="wishlist">❤️</button>
+    </div>
+
+    <!-- Product Card 4 -->
+    <div class="product-card">
+      <div class="product-image">
+        <img src="./img/4.webp" alt="Tee Unisex">
+        <span class="badge discount">-50%</span>
+        <span class="badge">Sostenibilità</span>
+      </div>
+      <div class="product-info">
+        <span class="brand">Levi's</span>
+        <h3>TEE UNISEX</h3>
+        <p class="price"><span class="discounted">14,99 €</span> <span class="original">29,99</span>
+      </div>
+      <button class="wishlist">❤️</button>
+    </div>
+
+    <!-- Product Card 5 -->
+    <div class="product-card">
+      <div class="product-image">
+        <img src="./img/5.webp" alt="Black Sweater">
+       
+      </div>
+      <div class="product-info">
+        <span class="brand">Maya Deluxe</span>
+        <h3>STRIPE BODICE</h3>
+        <p class="price"><span class="discounted">99,99 €</span></p>
+      </div>
+      <button class="wishlist">❤️</button>
+    </div>
+
+    <!-- Product Card 6 -->
+    <div class="product-card">
+      <div class="product-image">
+        <img src="./img/6.webp" alt="Tee Unisex">
+        
+        <span class="badge sustainability">Sostenibilità</span>
+      </div>
+      <div class="product-info">
+        <span class="brand">Esprit</span>
+        <h3>MAGLIONE - BLACK</h3>
+        <p class="price"><span class="discounted">29,99 €</span> 
+      </div>
+      <button class="wishlist">❤️</button>
+    </div>
+  </main>
+
 
 
 
