footer, logo and css codes added

--- a/index.html
+++ b/index.html
@@ -122,6 +122,21 @@
     </div>
   </main>
 
+  <footer class="footer">
+    <div class="container">
+      <h3>Boolando s.r.l</h3>
+      <p><a href="#">Informazioni legali</a>  <a href="#">Informativa sulla privacy</a> <a href="#">Diritto di recesso</a></p>
+    <div class="socials">
+        <h3>Trovaci anche su</h3>
+        <a href="#"><img src="./img/twitter-logo-2429.svg"</a>
+        <a href="#"><img src="./img/facebook-logo-2428.svg"</a>
+        <a href="#"><img src="./img/instagram-logo-8869 (1).svg"</a>
+        <a href="#"><img src="./img/pinterest-logo-2432.svg"</a>
+        <a href="#"><img src="./img/youtube-logo-2431 (1).svg"</a>
+    </div>
+    
+  </footer>
+
 
 
 
