--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="#"><img src="./img/search.svg" alt="Search"></a>
       </div>
     </div>
+  </header>
 
      <!-- Main Content -->
   <main class="product-grid">
@@ -121,16 +122,26 @@
       <button class="wishlist">❤️</button>
     </div>
   </main>
+    <footer class="footer">
+    <div class="container">
+      <h3>Boolando s.r.l</h3>
+      <p><a href="#">Informazioni legali</a>  <a href="#">Informativa sulla privacy</a> <a href="#">Diritto di recesso</a></p>
+    <div class="socials">
+        <h3> PuTrovaci anche su</h3>
+        <a href="#"><img src="./twitter-logo-2429.svg"</a>
+        <a href="#"><img src="./facebook-logo-2428.svg"</a>
+        <a href="#"><img src="./instagram-logo-8869 (1).svg"</a>
+        <a href="#"><img src="pinterest-logo-2432.svg"</a>
+        <a href="#"><img src="./youtube-logo-2431 (1).svg"</a>
+    </div>
+    
+  </footer>
 
 
 
 
 
 
-
-
-
-  </header>
     
 </body>
 </html>
