--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h3>Boolando s.r.l</h3>
       <p><a href="#">Informazioni legali</a>  <a href="#">Informativa sulla privacy</a> <a href="#">Diritto di recesso</a></p>
     <div class="socials">
-        <h3> PuTrovaci anche su</h3>
+        <h3> Puoi trovaci anche su</h3>
         <a href="#"><img src="./twitter-logo-2429.svg"</a>
         <a href="#"><img src="./facebook-logo-2428.svg"</a>
         <a href="#"><img src="./instagram-logo-8869 (1).svg"</a>
